--- a/src/app/user/shop/shop.component.html
+++ b/src/app/user/shop/shop.component.html
@@ -17,5 +17,6 @@
   [shopData]="cartArray"
   (notify)="childCartData($event)"
   [cart]="cartItem"
+  [shopAdd]="foodArray"
   *ngIf="!showMe"
 ></app-cart>
